<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.BuscadorActivity"
    android:weightSum="80">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/searchText"
        android:singleLine="true"
        android:textSize="16sp"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:background="@drawable/search_field"
        android:textColor="@color/colorBlack"
        android:layout_weight="5"
        android:drawableLeft="@drawable/lupa"
        />

    <include layout="@layout/content_licitaciones" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="5"
        android:weightSum="2">
        <Button
            android:id="@+id/btnBusqueda"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buscar"
            android:textSize="11sp"
            android:layout_weight="1"
            android:background="@drawable/boton_buscar_presionado"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/limpiar"
            android:textSize="11sp"
            android:layout_weight="1"
            android:background="@drawable/boton_limpiar_presionado"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
